{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 40,
  "lineage": "c7829e65-0bea-a3b2-2938-bdbeae84440d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0adb0bcd85aef6f08",
            "arn": "arn:aws:ec2:eu-west-1:905418041151:instance/i-0f28d74301cf56e31",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f28d74301cf56e31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098ed8f96d0b4482c",
            "private_dns": "ip-10-0-1-58.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_ip": "3.250.172.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e6f7e2771aed068d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05381bc492b68daa1",
            "tags": {
              "Name": "Main wordpress node"
            },
            "tags_all": {
              "Name": "Main wordpress node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b97855159b91c4e"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.Security_Group_EC2Wordpress",
            "module.subnet.aws_subnet.publicSubnet",
            "module.subnet.data.aws_availability_zones.AZN",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_EC2Wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905418041151:security-group/sg-08b97855159b91c4e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b97855159b91c4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for EC2 instances in wordpress vpc",
            "name_prefix": "",
            "owner_id": "905418041151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-EC2-SG"
            },
            "tags_all": {
              "Name": "dev-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d98b905fa633868"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905418041151:internet-gateway/igw-0f426f06079263dca",
            "id": "igw-0f426f06079263dca",
            "owner_id": "905418041151",
            "tags": {
              "Name": "dev-internetGateway"
            },
            "tags_all": {
              "Name": "dev-internetGateway"
            },
            "vpc_id": "vpc-06d98b905fa633868"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905418041151:route-table/rtb-0c57359f08053738e",
            "id": "rtb-0c57359f08053738e",
            "owner_id": "905418041151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f426f06079263dca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public_RouteTable"
            },
            "tags_all": {
              "Name": "dev-public_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d98b905fa633868"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_internet_gateway.internetGateway",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905418041151:subnet/subnet-05381bc492b68daa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05381bc492b68daa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418041151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-west-1a",
              "Environment": "dev-publicSubnet",
              "Name": "dev-publicSubnet-1"
            },
            "tags_all": {
              "AZ": "eu-west-1a",
              "Environment": "dev-publicSubnet",
              "Name": "dev-publicSubnet-1"
            },
            "vpc_id": "vpc-06d98b905fa633868"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.AZN",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905418041151:vpc/vpc-06d98b905fa633868",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b886f26637ea3e25",
            "default_route_table_id": "rtb-0d17a3e401aa11ebb",
            "default_security_group_id": "sg-06790f302b568ee41",
            "dhcp_options_id": "dopt-04f6cb768591be8c5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d98b905fa633868",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d17a3e401aa11ebb",
            "owner_id": "905418041151",
            "tags": {
              "name": "wordpress-vpc"
            },
            "tags_all": {
              "name": "wordpress-vpc"
            }
          }
        }
      ]
    }
  ]
}